--- a/PriceApp.UI/PriceApp.UI.csproj
+++ b/PriceApp.UI/PriceApp.UI.csproj
@@ -67,14 +67,14 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Configuration\LocalizationSettings.cs" />
-    <Compile Include="ProtocolDetails\ProtocolView.xaml.cs">
+    <Compile Include="Views\ProtocolView.xaml.cs">
       <DependentUpon>ProtocolView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ProtocolDetails\ProtocolViewModel.cs" />
-    <Compile Include="Settings\SettingsView.xaml.cs">
-      <DependentUpon>SettingsView.xaml</DependentUpon>
+    <Compile Include="ViewModels\ProtocolViewModel.cs" />
+    <Compile Include="Views\ConfigurationView.xaml.cs">
+      <DependentUpon>ConfigurationView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Settings\SettingsViewModel.cs" />
+    <Compile Include="ViewModels\ConfigurationViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\Bootstrapper.cs" />
@@ -95,9 +95,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="ProtocolDetails\ProtocolDetails.resx">
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -105,7 +102,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="ProtocolDetails\ProtocolView.xaml">
+    <Page Include="Views\ProtocolView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -117,10 +114,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Settings\SettingsView.xaml">
+    <Page Include="Views\ConfigurationView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ProtocolDetails\" />
+    <Folder Include="Settings\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
